Add periods to journal abbreviations to conform to Curr Biol formatting

--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -86,7 +86,7 @@
 @article{vieillard2016transition,
   title={Transition zone assembly and its contribution to axoneme formation in Drosophila male germ cells},
   author={Vieillard, Jennifer and Paschaki, Marie and Duteyrat, Jean-Luc and Augi{\`e}re, C{\'e}line and Cortier, Elisabeth and Lapart, Jean-Andr{\'e} and Thomas, Jo{\"e}lle and Durand, B{\'e}n{\'e}dicte},
-  journal={J Cell Biol},
+  journal={J. Cell. Biol.},
   pages={jcb--201603086},
   year={2016},
   publisher={Rockefeller University Press}
@@ -106,7 +106,7 @@
 @article{pratt2016drosophila,
   title={Drosophila sensory cilia lacking MKS proteins exhibit striking defects in development but only subtle defects in adults},
   author={Pratt, Metta B and Titlow, Joshua S and Davis, Ilan and Barker, Amy R and Dawe, Helen R and Raff, Jordan W and Roque, Helio},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={129},
   number={20},
   pages={3732--3743},
@@ -117,7 +117,7 @@
 @article{enjolras2012drosophila,
   title={Drosophila chibby is required for basal body formation and ciliogenesis but not for Wg signaling},
   author={Enjolras, Camille and Thomas, Jo{\"e}lle and Chhin, Brigitte and Cortier, Elisabeth and Duteyrat, Jean-Luc and Soulavie, Fabien and Kernan, Maurice J and Lauren{\c{c}}on, Anne and Durand, B{\'e}n{\'e}dicte},
-  journal={J Cell Biol},
+  journal={J. Cell. Biol.},
   volume={197},
   number={2},
   pages={313--325},
@@ -268,7 +268,7 @@
 @article{franz2013cp110,
   title={CP110 exhibits novel regulatory activities during centriole assembly in Drosophila},
   author={Franz, Anna and Roque, H{\'e}lio and Saurya, Saroj and Dobbelaere, Jeroen and Raff, Jordan W},
-  journal={J Cell Biol},
+  journal={J. Cell. Biol.},
   pages={jcb--201305109},
   year={2013},
   publisher={Rockefeller University Press}
@@ -531,7 +531,7 @@
 @article{saurya2016drosophila,
   title={Drosophila Ana1 is required for centrosome assembly and centriole elongation},
   author={Saurya, Saroj and Roque, H{\'e}lio and Novak, Zsofia A and Wainman, Alan and Aydogan, Mustafa G and Volanakis, Adam and Sieber, Boris and Pinto, David Miguel Susano and Raff, Jordan W},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={129},
   number={13},
   pages={2514--2525},
@@ -575,7 +575,7 @@
 @article{dyson2017inpp5e,
   title={INPP5E regulates phosphoinositide-dependent cilia transition zone function},
   author={Dyson, Jennifer M and Conduit, Sarah E and Feeney, Sandra J and Hakim, Sandra and DiTommaso, Tia and Fulcher, Alex J and Sriratana, Absorn and Ramm, Georg and Horan, Kristy A and Gurung, Rajendra and others},
-  journal={J Cell Biol},
+  journal={J. Cell. Biol.},
   volume={216},
   number={1},
   pages={247--263},
@@ -663,7 +663,7 @@
 @article{satir2010primary,
   title={The primary cilium at a glance},
   author={Satir, Peter and Pedersen, Lotte B and Christensen, S{\o}ren T},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={123},
   number={4},
   pages={499--503},
@@ -674,7 +674,7 @@
 @article{bloodgood2010sensory,
   title={Sensory reception is an attribute of both primary cilia and motile cilia},
   author={Bloodgood, Robert A},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={123},
   number={4},
   pages={505--509},
@@ -696,7 +696,7 @@
 @article{gottardo2013cilium,
   title={The cilium-like region of the Drosophila spermatocyte: an emerging flagellum?},
   author={Gottardo, Marco and Callaini, Giuliano and Riparbelli, Maria Giovanna},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={126},
   number={23},
   pages={5441--5452},
@@ -718,7 +718,7 @@
 @article{xu2014pipkigamma,
   title={PIPKI$\gamma$ targets to the centrosome and restrains centriole duplication},
   author={Xu, Qingwen and Zhang, Yuxia and Xiong, Xunhao and Huang, Yan and Salisbury, Jeffery L and Hu, Jinghua and Ling, Kun},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={127},
   number={6},
   pages={1293--1305},
@@ -783,7 +783,7 @@
 @article{inaba2016sperm,
   title={Sperm dysfunction and ciliopathy},
   author={Inaba, Kazuo and Mizuno, Katsutoshi},
-  journal={Reproductive medicine and biology},
+  journal={Reproductive Medicine and Biology},
   volume={15},
   number={2},
   pages={77--94},
@@ -805,7 +805,7 @@
 @article{serwas2017centrioles,
   title={Centrioles initiate cilia assembly but are dispensable for maturation and maintenance in \textit{C. elegans}},
   author={Serwas, Daniel and Su, Tiffany Y and Roessler, Max and Wang, Shaohe and Dammermann, Alexander},
-  journal={J Cell Biol},
+  journal={J. Cell. Biol.},
   volume={216},
   number={6},
   pages={1659--1671},
@@ -816,7 +816,7 @@
 @article{sengupta2013depletion,
   title={Depletion of PtdIns (4, 5) P2 underlies retinal degeneration in Drosophila trp mutants},
   author={Sengupta, Sukanya and Barber, Thomas R and Xia, Hongai and Ready, Donald F and Hardie, Roger C},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={126},
   number={5},
   pages={1247--1259},
@@ -1090,7 +1090,7 @@
 @article{chang2016cep295,
   title={CEP295 interacts with microtubules and is required for centriole elongation},
   author={Chang, Ching-Wen and Hsu, Wen-Bin and Tsai, Jhih-Jie and Tang, Chieh-Ju C and Tang, Tang K},
-  journal={J Cell Sci},
+  journal={J. Cell. Sci.},
   volume={129},
   number={13},
   pages={2501--2513},
@@ -1120,3 +1120,35 @@
   publisher={Oxford University Press}
 }
 
+@article{gonccalves2017ciliary,
+  title={The ciliary transition zone: finding the pieces and assembling the gate},
+  author={Gon{\c{c}}alves, Jo{\~a}o and Pelletier, Laurence},
+  journal={Molecules and cells},
+  volume={40},
+  number={4},
+  pages={243},
+  year={2017},
+  publisher={Korean Society for Molecular and Cellular Biology}
+}
+
+@article{eley2005cilia,
+  title={Cilia and disease},
+  author={Eley, Lorraine and Yates, Laura M and Goodship, Judith A},
+  journal={Current Opinion in Genetics \& Development},
+  volume={15},
+  number={3},
+  pages={308--314},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{rachel2012photoreceptor,
+  title={Photoreceptor sensory cilia and ciliopathies: focus on CEP290, RPGR and their interacting proteins},
+  author={Rachel, Rivka A and Li, Tiansen and Swaroop, Anand},
+  journal={Cilia},
+  volume={1},
+  number={1},
+  pages={22},
+  year={2012},
+  publisher={BioMed Central}
+}
